--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ input[type="number"]{
     padding: 5px;
     height: 20px;
 }
-input[type="button"]{
+button{
     height:30px;
     background-color: #fff;
     border-radius: 10px;
@@ -35,7 +35,7 @@ input[type="button"]{
     margin-left: 10px;
     border: 2px solid #000;
 }
-input[type="button"]:hover{
+button:hover{
     background-color: #000;
     color: #fff;
 }
