--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 }
 .box{
     display: flex;
+    gap:5px;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -32,7 +33,6 @@ button{
     background-color: #fff;
     border-radius: 10px;
     width: 50px;
-    margin-left: 10px;
     border: 2px solid #000;
 }
 button:hover{
